Bug 30540 - [gdb/tdep] AT_RSEQ_FEATURE_SIZE / AT_RSEQ_ALIGN support missing in "info auxv"
Summary: [gdb/tdep] AT_RSEQ_FEATURE_SIZE / AT_RSEQ_ALIGN support missing in "info auxv"
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: tdep (show other bugs)
Version: 13.1
: P2 normal
Target Milestone: 14.1
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-12 07:36 UTC by Tom de Vries
Modified: 2023-10-07 13:42 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom de Vries 2023-06-12 07:36:57 UTC
With a 13.2 based packaged, on openSUSE Tumbleweed x86_64, I run into:
...
(gdb) info auxv^M
33   AT_SYSINFO_EHDR      System-supplied DSO's ELF header 0x7ffff7fc7000^M
51   AT_MINSIGSTKSZ       Minimum stack size for signal delivery 0x6f0^M
16   AT_HWCAP             Machine-dependent CPU capability hints 0x178bfbff^M
6    AT_PAGESZ            System page size               4096^M
17   AT_CLKTCK            Frequency of times()           100^M
3    AT_PHDR              Program headers for program    0x400040^M
4    AT_PHENT             Size of program header entry   56^M
5    AT_PHNUM             Number of program headers      13^M
7    AT_BASE              Base address of interpreter    0x7ffff7fc9000^M
8    AT_FLAGS             Flags                          0x0^M
9    AT_ENTRY             Entry point of program         0x40105e^M
11   AT_UID               Real user ID                   399^M
12   AT_EUID              Effective user ID              399^M
13   AT_GID               Real group ID                  399^M
14   AT_EGID              Effective group ID             399^M
23   AT_SECURE            Boolean, was exec setuid-like? 0^M
25   AT_RANDOM            Address of 16 random bytes     0x7fffffffdaa9^M
26   AT_HWCAP2            Extension of AT_HWCAP          0x0^M
31   AT_EXECFN            File name of executable        0x7fffffffef77 "/home/abuild/rpmbuild/BUILD/gdb-13.2/build-x86_64-suse-linux/gdb/testsuite.unix.-m64.-fno-PIE.-no-pie/outputs/gdb.base/auxv/auxv"^M
15   AT_PLATFORM          String identifying platform    0x7fffffffdab9 "x86_64"^M
27   ???                                                 0x1c^M
28   ???                                                 0x20^M
0    AT_NULL              End of vector                  0x0^M
(gdb) WARNING: Unrecognized tag value: 27   ???                                                 0x1c^M

WARNING: Unrecognized tag value: 28   ???                                                 0x20^M

FAIL: gdb.base/auxv.exp: info auxv on live process
...

Grepping in the kernel sources gets me:
...
$ find -name auxvec.h | xargs grep 27
./include/uapi/linux/auxvec.h:#define AT_RSEQ_FEATURE_SIZE	27	/* rseq supported feature size */
$ find -name auxvec.h | xargs grep 28
./include/uapi/linux/auxvec.h:#define AT_RSEQ_ALIGN		28	/* rseq allocation alignment */
...
Comment 1 Tom Tromey 2023-09-19 17:52:56 UTC
Hit this on Fedora 38 as well.
Found this: https://lore.kernel.org/lkml/20220218210633.23345-2-mathieu.desnoyers@efficios.com/

rseq seems to be "restartable sequences".
Comment 2 Tom de Vries 2023-10-03 20:34:44 UTC
https://sourceware.org/pipermail/gdb-patches/2023-June/200435.html .

Also just approved.
Comment 3 Sourceware Commits 2023-10-07 01:29:31 UTC
The master branch has been updated by Simon Marchi <simark@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=7a3bb62d82631ff042525b7115d9e03a7329e7be

commit 7a3bb62d82631ff042525b7115d9e03a7329e7be
Author: Ilya Leoshkevich <iii@linux.ibm.com>
Date:   Thu Jun 22 01:03:04 2023 +0200

    gdb: support rseq auxvs
    
    Linux kernel commit commit 317c8194e6ae ("rseq: Introduce feature size
    and alignment ELF auxiliary vector entries") introduced two new auxvs:
    AT_RSEQ_FEATURE_SIZE and AT_RSEQ_ALIGN.  Support them in GDB.  This
    fixes auxv.exp on kernels >= v6.3.
    
    Change-Id: I8966c4d5c73eb7b45de6d410a9b28a6628edad2e
    Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=30540
    Approved-By: Tom Tromey <tom@tromey.com>
Comment 4 Tom Tromey 2023-10-07 13:42:57 UTC
Fixed.